# tometo_tomato

./: .gitignore  CLAUDE.md  ISSUE_READ_HEADER.md  LOG.md  README.md  _quarto.yml  debug_csv_detection.py  debug_read_header_direct.py  index.qmd  pyproject.toml  setup.py  test_pandas_alternatives.py  tometo_tomato
.gemini/: GEMINI.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
data/processed/: joined_istat_codes.csv  test_clean.csv
data/raw/: anagrafica.csv  fatture.csv  ref.csv  situas_comuni.csv
doc_sources/: PRD.md  cli-reference.qmd  how-to.qmd  install.qmd  introduction.qmd  project_review.md  use-case-guide.qmd
doc_sources/files/: ref_sample_full.csv  reference.csv  work_file.csv
docs/: PRD.md  RELEASE.md  how-to.qmd  index.html  project_analysis.md  search.json  search_replace_block_rules.md
docs/doc_sources/: PRD.html  RELEASING.html  about.html  cli-reference.html  how-to.html  install.html  introduction.html  project_analysis.html  project_review.html  use-case-guide.html
docs/doc_sources/files/: ref_sample.csv
docs/files/: input.csv  istat_municipalities.csv  istat_municipalities_raw.csv  ref.csv
openspec/: project.md
openspec/changes/archive/2025-11-06-add-encoding-check/: proposal.md  tasks.md
openspec/changes/archive/2025-11-06-add-encoding-check/specs/csv-processing/: spec.md
openspec/specs/csv-processing/: spec.md
resources/: bashly.md  quarto.md
scripts/: clean_ignored.sh  fuzzy_join.sh
src/: README.md  _version.py  bashly.yml  fuzzy_join.py  fuzzy_join_command.sh  root_command.sh  tometo_tomato.py
src/tometo_tomato/: __init__.py  tometo_tomato.py
tests/: test_core.py
tmp_csvs/: hello_semi.csv  quoted_semicolon.csv
