[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tometo_tomato"
description = "A utility for fuzzy joining tabular data using DuckDB."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  {name = "Andrea Borruso", email = "aborruso@gmail.com"},
]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "duckdb",
    "rapidfuzz",
]

[project.urls]
"Homepage" = "https://github.com/aborruso/tometo_tomato"

[project.scripts]
tometo_tomato = "tometo_tomato:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/_version.py"