[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tometo_tomato"
dynamic = ["version"]
description = "A fuzzy join utility using DuckDB"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["duckdb", "fuzzy-join", "etl", "data-processing"]
authors = [
  { name = "Andrea Borruso", email = "andrea.borruso@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "duckdb",
  "rapidfuzz",
  "numpy",
]

[project.urls]
"Homepage" = "https://github.com/aborruso/tometo_tomato"
"Bug Tracker" = "https://github.com/aborruso/tometo_tomato/issues"

[project.scripts]
tometo_tomato = "tometo_tomato.tometo_tomato:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "dirty-tag"
